# tp_last

./: .coverage  .env  .gitignore  .pre-commit-config.yaml  Architecture du Pipeline CI_CD_CT MLOps.md  Dockerfile  Makefile  README.md  README_UV.md  conftest.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci-cd-ct.yaml
.viz/: stats.json
bruno/credit-scoring-api/: bruno.json
bruno/credit-scoring-api/auth/: 01_login_data_scientist.bru  02_login_admin.bru  03_login_invalide.bru  04_refresh_token.bru  05_profil_utilisateur.bru
bruno/credit-scoring-api/batch/: 05_batch_prediction.bru
bruno/credit-scoring-api/environments/: docker.bru  local.bru
bruno/credit-scoring-api/health/: 01_health_check.bru
bruno/credit-scoring-api/model/: 06_model_info.bru
bruno/credit-scoring-api/predict/: 02_predict_solvable.bru  03_predict_risque_eleve.bru  04_predict_donnees_invalides.bru
conf/api/: catalog.yml
conf/base/: catalog.yml  catalog_cloud_examples.yml  mlflow.yml
conf/base/parameters/: data_processing.yml  training.yml
scripts/: export_artifacts.py
src/credit_scoring_kedro/: __init__.py  __main__.py  config.py  hooks.py  models.py  pipeline_registry.py  settings.py
src/credit_scoring_kedro/api/: app.py  main.py
src/credit_scoring_kedro/api/middleware/: rate_limit.py
src/credit_scoring_kedro/api/public/health/: models.py
src/credit_scoring_kedro/api/public/model_info/: models.py
src/credit_scoring_kedro/api/public/predict/: models.py
src/credit_scoring_kedro/api/routers/: auth.py  health.py  model_info.py  predict.py
src/credit_scoring_kedro/api/schemas/: credit.py
src/credit_scoring_kedro/api/security/: auth.py
src/credit_scoring_kedro/api/utils/: feature_engineering.py  session.py
src/credit_scoring_kedro/pipelines/data_processing/: nodes.py  pipeline.py
src/credit_scoring_kedro/pipelines/feature_engineering/: nodes.py  pipeline.py
src/credit_scoring_kedro/pipelines/reporting/: nodes.py  pipeline.py
src/credit_scoring_kedro/pipelines/training/: nodes.py  pipeline.py
tests/api/: conftest.py  test_batch.py  test_health.py  test_model_info.py  test_predict.py  test_security.py
tests/load/: locustfile.py
